--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,5 @@
 {
-  "functions": {
-    "workbench/*.php": {
-      "runtime": "vercel-php@0.6.0"
-    }
-  }
+  "routes": [
+    { "src": "/(.*)",  "dest": "/workbench/index.php" }
+  ]
 }
